Redesigned registration pages: Usability check fixes for .wizard-btn-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -172,22 +172,20 @@ input[type="text"].input--fixed-4-character {
   margin: 3rem 0 2rem;
   text-align: center;
 }
+.wizard-btn-wrap__left {
+  float: left;
+}
 .wizard-btn-wrap__left > a, .wizard-btn-wrap__left > .btn {
   margin-right: 15px;
+}
+.wizard-btn-wrap__right {
+  float: right;
 }
 .wizard-btn-wrap__right > a, .wizard-btn-wrap__right > .btn {
   margin-left: 15px;
 }
 .wizard-btn-wrap__right > a:first-child, .wizard-btn-wrap__right > .btn:first-child {
   margin-left: 0;
-}
-@media screen and (min-width: 465px) {
-  .wizard-btn-wrap__left {
-    float: left;
-  }
-  .wizard-btn-wrap__right {
-    float: right;
-  }
 }
 
 /* Maths question: styling outside of normal form behaviour, else it doesn't look right. */
